# mindwebfilter

./: Compiling_Toy_in_Debian.md  Compiling_Toy_in_FreeBSD.md  NEWS.md  ProjectHome.md  Terminology.md  Toy.md  userManual.md
mind/: Makefile.in  aclocal.m4  autogen.sh  bootstrap  configure  configure.ac  mind_config.h.in
mind-blaster/: ConfigurationManager.cpp  ConfigurationManager.hpp  RequestHandler.hpp  comp.sh  main.cpp
mind-blaster/lib/spserver/: spexecutor.cpp  sphttp.cpp  spioutils.cpp  spserver.cpp  spthreadpool.cpp
mind-toy/: NEWS  compile.sh  configure.ac
mind-toy/configs/contentscanners/: kavav.conf.in
mind-toy/configs/lists/: bannedphraselist.in  bannedsitelist.in  exceptioniplist  exceptionphraselist.in
mind-toy/data/: mind.pl
mind-toy/data/scripts/: bsd-init.in  mind.in  (+2 more)
mind-toy/doc/: DownloadManagers  Makefile.am
mind-toy/src/: ConnectionHandler.cpp  ConnectionHandler.hpp  FatController.hpp  HTTPHeader.cpp  ListContainer.cpp  ListManager.cpp  Logger.cpp  SocketArray.cpp  UDSocket.cpp  md5.cpp  mind.cpp  mind.hpp
mind/configs/: Makefile.in  mind.conf.in
mind/data/: Makefile.in
mind/doc/: Makefile.in  faqconv.pl
mind/src/: DynamicURLList.cpp  HTTPHeader.cpp  HTTPHeader.hpp  ImageContainer.cpp  LanguageContainer.cpp  Logger.cpp  Logger.hpp  Makefile.am  Makefile.in  OptionContainer.cpp  SysV.cpp  mind.cpp
trunk/mind/: Makefile.am  aclocal.m4  compile.sh  configure  configure.ac  mind_config.h.in  stamp-h1
trunk/mind-blaster/: LogManager.cpp  LogManager.hpp  RequestHandler.cpp  main.hpp  mind.cfg
trunk/mind-toy/: NEWS  README  aclocal.m4  bootstrap  configure.ac  mind_config.h.in
trunk/mind-toy/data/languages/: Makefile.am
trunk/mind-toy/data/languages/arspanish/: messages
trunk/mind-toy/data/languages/italian/: messages  template.html
trunk/mind-toy/data/languages/mxspanish/: messages
trunk/mind-toy/data/languages/portuguese/: messages
trunk/mind-toy/data/languages/ptbrazilian/: template.html
trunk/mind-toy/data/languages/ukenglish/: template.html
trunk/mind/configs/: Makefile.am  Makefile.in  mind.conf.in  mindf1.conf.in
trunk/mind/configs/authplugins/: Makefile.in  ip.conf
trunk/mind/configs/contentscanners/: Makefile.am  clamdscan.conf.in
trunk/mind/configs/downloadmanagers/: Makefile.in  fancy.conf
trunk/mind/configs/lists/: Makefile.in  bannedphraselist.in  bannedsitelist.in  logurllist  weightedphraselist.in
trunk/mind/configs/lists/blacklists/: Makefile.am  Makefile.in
trunk/mind/configs/lists/phraselists/: Makefile.in
trunk/mind/configs/lists/phraselists/googlesearches/: banned
trunk/mind/configs/lists/phraselists/pornography/: banned
wiki/: Compiling_Toy_in_Debian.wiki  Compiling_Toy_in_FreeBSD.wiki  NEWS.wiki  Terminology.wiki  Toy.wiki  ToyCompile.wiki  ToyConfiguation.wiki  userManual.wiki
(+187 files in other folders)
